# qroll

./: AUTHORS  CMakeLists.txt  INSTALL  INSTALL-fr  README  TODO  build-config  changelog.html  config-app.template  config.template  configure  maker  project_info.cmake  qroll.bcg
cmake/: qroll-config.cmake  qroll-config.cmake.in
share/data/: bebetes.b  explode.b  spritcar.b
share/icons/: copy.xpm  fileopen-down.xpm  fileopen_xpm.xpm  paint.xpm  pause_xpm.xpm  play_xpm.xpm  rect.xpm  rockdroid.xcf  rockroll.xpm
share/icons/.xvpics/: fill.xpm  pattern.xpm  rect.xpm
share/levels/: serie0.rol  serie10.r&r  serie11.rol  serie12.rol  serie14.r&r  serie19.r&r  serie2.rol  serie20.rol  serie21.rol  serie3.r&r  serie30.rol  serie32.rol  serie6.r&r  serie7.r&r  serie7.rol  serie8.rol  serie9.r&r
share/po/en/: qroll.ts  rules.html
share/po/fr/: about.txt  qroll.qm  qroll.ts  rules.html
share/qroll/data/: explode.b  random.b  spritcar.b  spritdef.b
share/qroll/icons/: fill.xpm  pattern.xpm  pause-down.xpm  play-down.xpm  stop-down.xpm  stop_xpm.xpm
share/qroll/icons/.xvpics/: copy.xpm  paint.xpm
share/qroll/levels/: serie1.r&r  serie13.r&r  serie15.r&r  serie1b.r&r  serie200.r&r  serie31.r&r  serie4.r&r  serie5.r&r
share/qroll/po/: Makefile
share/qroll/po/en/: about.txt
share/qroll/po/fr/: qroll.qm
share/qroll/scripts/: qroll
share/xml/: installer-configuration.xml
src/: CMakeFiles.txt  CMakeLists.txt  src.pro
src/libroll/: CMakeLists.txt  libroll.pro
src/libroll/game/: back.cc  back.h  backFactory.cc  backFactory.h  ball.cc  ball.h  blob.cc  blob.h  bomb.cc  bomb.h  breakablerock.cc  breakablerock.h  burningBomb.cc  burningBomb.h  button.cc  button.h  closeDoor.cc  closeDoor.h  constantes.h  conveyLever.cc  conveyLever.h  conveyorBelt.cc  conveyorBelt.h  detonator.cc  detonator.h  diam.cc  diam.h  diamMonster.cc  diamMonster.h  documentation.h  door.cc  door.h  dynamite.cc  dynamite.h  eatable.cc  eatable.h  elemFactory.cc  elemFactory.h  fallingEatable.cc  fallingEatable.h  (+65 more)
src/libroll/gui/: clientDialog.cc  clientDialog.h  configWin.cc  configWin.h  copy.xpm  editPalette.cc  editPalette.h  fileopen_xpm.xpm  fill.xpm  gameConfig.cc  gameConfig.h  gameField.cc  gameField.h  glcontext.cc  glcontext.h  levelParams.cc  levelParams.h  mainWin.cc  mainWin.h  paint.xpm  paintcommand.cc  paintcommand.h  painter.cc  painter.h  pattern.xpm  pause_xpm.xpm  playField.cc  playField.h  play_xpm.xpm  qAbout.cc  qAbout.h  qAboutMessages.cc  qGameField.cc  qGameField.h  qRollAbout.cc  qRollAbout.h  qdatastreamWrapper.h  qglGameField.cc  qglGameField.h  rect.xpm  (+8 more)
src/libroll/socket/: netMessages.cc  netMessages.h  playerServerSocket.cc  playerServerSocket.h  qPlayerServer.cc  qPlayerServer.h  singleSocket.cc  singleSocket.h
src/libroll/somasound/: diffcode.cc  diffcode.h  somaqaudiooutput.cc  somaqaudiooutput.h  somaqsound.cc  somaqsound.h  somaqsoundeffect.cc  somaqsoundeffect.h  somasoundalsa.cc  somasoundalsa.h  somasoundoss.cc  somasoundoss.h  somasoundprocessor.cc  somasoundprocessor.h  somasoundqtphonon.cc  somasoundqtphonon.h  soundbank.cc  soundbank.h  sounditerator.cc  sounditerator.h  soundslot.h  wavheader.cc  wavheader.h
src/libroll/sound/: alsaProcessor.cc  alsaProcessor.h  diffcode.cc  diffcode.h  dsp.cc  dsp.h  qsound.cc  qsound.h  rollsoundbank.cc  rollsoundbank.h  soundProcessor.cc  soundProcessor.h  soundslot.h  wavheader.cc  wavheader.h
src/libroll/struct/: atariFormat.h  blobDescr.cc  blobDescr.h  explosions.cc  explosions.h  general.h  level.cc  level.h  levelAtari.cc  levelAtari.h  levelPar.h  levelParam.h  levelRaw.cc  levelRaw.h  qfileWrapper.h  series.cc  series.h  seriesAtari.cc  seriesAtari.h  seriesManager.cc  seriesManager.h  seriesRaw.cc  seriesRaw.h  simpleLevel.cc  simpleLevel.h  simpleLevel_d.h  stream_traits.h  workLevel.cc  workLevel.h
src/mac-frontend/: CMakeLists.txt  qroll.cc  qroll.pro
src/qroll/: CMakeLists.txt  main.cc  qroll.pro
src/qrsndconv/: CMakeLists.txt  qrsndconv.pro  sndconv.cc
